--- a/kaggleKernel/LinearAlgebra.ipynb
+++ b/kaggleKernel/LinearAlgebra.ipynb
@@ -281,29 +281,491 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([-3,  6, -3])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Vector Cross Product (외적)\n",
+    "x = [1,2,3]\n",
+    "y = [4,5,6]\n",
+    "np.cross(x,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "70"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Vector Dot Product (벡터곱)\n",
+    "x = np.array([1, 2, 3, 4])\n",
+    "y = np.array([5, 6, 7, 8])\n",
+    "np.dot(x,y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[-3  6 -3] 32\n"
+      "[[5]\n",
+      " [6]\n",
+      " [7]\n",
+      " [8]]\n",
+      "[[5]\n",
+      " [6]\n",
+      " [7]\n",
+      " [8]]\n",
+      "[[5]\n",
+      " [6]\n",
+      " [7]\n",
+      " [8]]\n"
      ]
     }
    ],
    "source": [
-    "x = [1,2,3]\n",
-    "y = [4,5,6]\n",
-    "print(np.cross(x,y),np.dot(x,y))"
+    "# Matrix Transform\n",
+    "x = np.array([[1, 2, 3, 4]])\n",
+    "y = np.array([[5, 6, 7, 8]])\n",
+    "print(y.T)\n",
+    "print(np.reshape(y,(4,1)))\n",
+    "print(y.transpose())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[70]]\n",
+      "70\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Matrix Dot Product \n",
+    "print(np.dot(x,y.T))\n",
+    "print(np.dot(x,y.T)[0][0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 5  6  7  8]\n",
+      " [10 12 14 16]\n",
+      " [15 18 21 24]\n",
+      " [20 24 28 32]]\n",
+      "[[ 5  6  7  8]\n",
+      " [10 12 14 16]\n",
+      " [15 18 21 24]\n",
+      " [20 24 28 32]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Matrix Outer Product\n",
+    "print(x.T * y)\n",
+    "print(np.outer(x,y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[16  6  8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Metrix-Vector Dot Product\n",
+    "a = np.array([[5,1,3],[1,1,1],[1,2,1]])\n",
+    "b = np.array([1,2,3])\n",
+    "print(a.dot(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[4, 1],\n",
+       "       [2, 2]])"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Matrix-Matrix Product\n",
+    "a = [[1,0],[0,1]]\n",
+    "b = [[4,1],[2,2]]\n",
+    "np.matmul(a,b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "matrix([[5, 1],\n",
+       "        [2, 3]])"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Matrix-Matrix Add\n",
+    "matrix1 = np.matrix(a)\n",
+    "matrix2 = np.matrix(b)\n",
+    "matrix1 + matrix2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "matrix([[-3, -1],\n",
+       "        [-2, -1]])"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Matrix-Matrix Sub\n",
+    "matrix1 - matrix2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[4 1]\n",
+      " [2 2]]\n",
+      "[[4 1]\n",
+      " [2 2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Matrix-Matrix Dot Product\n",
+    "print(np.dot(matrix1, matrix2))\n",
+    "print(matrix1 * matrix2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Identity Matrix (단위행렬)\n",
+    "numpy.identity(n, dtype=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1., 0., 0.],\n",
+       "       [0., 1., 0.],\n",
+       "       [0., 0., 1.]])"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.identity(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(2, 3)\n",
+      "[[1 0 0]\n",
+      " [0 1 0]\n",
+      " [0 0 1]]\n",
+      "[[1 0]\n",
+      " [0 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "identy = np.array([[21,5,7],[9,8,16]])\n",
+    "print(identy.shape)\n",
+    "print(np.identity(identy.shape[1], dtype=\"int\"))\n",
+    "print(np.identity(identy.shape[0], dtype=\"int\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.3333 -0.1667]\n",
+      " [-0.3333  0.6667]]\n",
+      "[[4 1]\n",
+      " [2 2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Inverse Matrices (역행렬) : X 행렬과 곱하여 단위행렬이 되는 행렬\n",
+    "inverse = np.linalg.inv(matrix2)\n",
+    "print(inverse)\n",
+    "print(matrix2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Diagonal Matrix(대각 행렬)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  5 10 15]\n",
+      "[ 1  6 11]\n",
+      "[ 4  9 14]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = np.array([[0,   1,  2,  3],\n",
+    "              [4,   5,  6,  7],\n",
+    "              [8,   9, 10, 11],\n",
+    "              [12, 13, 14, 15]])\n",
+    "print(np.diag(A))\n",
+    "print(np.diag(A,k=1))\n",
+    "print(np.diag(A,k=-1))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Transpose of a Matrix (전치행렬)\n",
+    "행과 열을 교환"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2]\n",
+      " [3 4]]\n",
+      "[[1 3]\n",
+      " [2 4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([[1, 2], [3, 4]])\n",
+    "print(a)\n",
+    "print(a.transpose())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Symmetric Matrix ( 대칭행렬 )\n",
+    "![](https://wikimedia.org/api/rest_v1/media/math/render/svg/ad8a5a3a4c95de6f7f50b0a6fb592d115fe0e95f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\blue4\\Anaconda3\\envs\\jay\\lib\\site-packages\\ipykernel_launcher.py:2: DeprecationWarning: This function is deprecated. Please call randint(-2000, 2000 + 1) instead\n",
+      "  \n"
+     ]
+    }
+   ],
+   "source": [
+    "N = 100\n",
+    "b = np.random.random_integers(-2000,2000,size=(N,N))\n",
+    "b_symm = (b + b.T)/2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[  939. ,   -31. ,  -257. , ...,  -610. ,  1153. ,   525.5],\n",
+       "       [  -31. ,  1738. ,  -327.5, ...,  -173.5,  -963.5,  -593.5],\n",
+       "       [ -257. ,  -327.5,  1470. , ...,  -211. ,    82. ,   714. ],\n",
+       "       ...,\n",
+       "       [ -610. ,  -173.5,  -211. , ..., -1883. ,    91.5,  -566.5],\n",
+       "       [ 1153. ,  -963.5,    82. , ...,    91.5, -1429. ,  -874. ],\n",
+       "       [  525.5,  -593.5,   714. , ...,  -566.5,  -874. ,  -505. ]])"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b_symm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## The Trace\n",
+    "행렬의 대각 합"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]]\n",
+      "3.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.eye(3))\n",
+    "print(np.trace(np.eye(3)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.0\n",
+      "[[4 1]\n",
+      " [2 2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "det = np.linalg.det(matrix2)\n",
+    "print(det)\n",
+    "print(matrix2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Norms\n"
+   ]
   }
  ],
  "metadata": {
