--- a/Python/JupyterHub.ipynb
+++ b/Python/JupyterHub.ipynb
@@ -111,6 +111,9 @@
     "# Create Conda env\n",
     "conda create -n test\n",
     "\n",
+    "# 만약 root의 환경을 그대로 받아오고 싶으면 \n",
+    "# conda create --name test --clone root\n",
+    "\n",
     "# Install nb_conda_kernels\n",
     "conda install nb_conda_kernels\n",
     "\n",
