mysql, hive in python

--- a/Python/JupyterHub.ipynb
+++ b/Python/JupyterHub.ipynb
@@ -138,6 +138,51 @@
     "\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Connect To Mysql in Python\n",
+    "```bash\n",
+    "# Install \n",
+    "conda install PyMySQL\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "# import\n",
+    "import mysql\n",
+    "import pandas as pd\n",
+    "\n",
+    "connection = pymysql.connect(host=localhost,user='user',password='passwd',db='database',charset='utf8',autocommit=True,cursorclass=pymysql.cursors.DictCursor)\n",
+    "df = pd.read_sql(\"show databases\", connection)\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Connect To Hive in Python\n",
+    "```bash\n",
+    "# Install\n",
+    "yum install libsasl2-dev\n",
+    "\n",
+    "conda install sasl\n",
+    "conda install thrift\n",
+    "conda install thrift-sasl\n",
+    "conda install PyHive\n",
+    "```\n",
+    "\n",
+    "```python\n",
+    "# Python\n",
+    "from pyhive import hive\n",
+    "import pandas as pd\n",
+    "\n",
+    "connection = hive.Connection(host=Hiveserver2, port=10000, username='user')\n",
+    "df = pd.read_sql(\"show databases\", connection)\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
